--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
+  "name": "api-projet-collaboratif-cda22",
+  "version": "1.0.0",
+  "description": "<a name=\"readme-top\"></a>",
+  "main": "commitlint.config.js",
+
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "husky": "^8.0.2"
-  }
+    "husky": "^8.0.2",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.15",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.1"
+  },
+  "scripts": {
+    "build": "tsc",
+    "dev": "npm run build && nodemon build/server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
