--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "api-projet-collaboratif-cda22",
-  "version": "1.0.0",
-  "description": "<a name=\"readme-top\"></a>",
-  "main": "commitlint.config.js",
-
-  "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "husky": "^8.0.2",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
-    "@types/express": "^4.17.15",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^6.8.1"
+    "@strapi/plugin-graphql": "^4.0.0",
+    "lodash.set": "^4.3.2",
+    "mime-types": "^2.1.27",
+    "@strapi/strapi": "4.9.0",
+    "@strapi/plugin-users-permissions": "4.9.0",
+    "@strapi/plugin-i18n": "4.9.0",
+    "better-sqlite3": "8.0.1"
   },
+  "name": "api-cubes",
+  "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
   "scripts": {
-    "build": "rm -rf build/* && tsc",
-    "dev": "npm run build && nodemon build/server.js"
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {},
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "strapi": {
+    "uuid": "94b0a5be-e963-419f-bef2-b31a82d2afff",
+    "template": "ecommerce"
+  },
+  "engines": {
+    "node": ">=14.19.1 <=18.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
