--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "generate:types": "npm run strapi ts:generate-types --verbose"
   },
   "author": {
     "name": "A Strapi developer"
